   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bugs fixed
      - Fixed bug in OData extension when looping through a multi pages collection.
        Reported by Vishnu Perabathini.
    - Enhancements
      - 

- 2.2.3 (11/27/2014)
    - Bugs fixed
      - Fixed potential NPE in OData extension when schema ComplexType in a 
        document does not declare a schema attribute (issue #932).
      - Uncaught exceptions may cause LogFilter to fail, with dire consequences.
        Issue #931. Reported and contributed by Tal Liron.
      - Securing JaxRepresentation by default (issue #785). Reported by Jim Trainor.
      - OData Edm.DateTime properties are sometimes parsed as null (issue #946).
        Reported and contributed by Emmanuel Liossis.
      - Prevent potential security issue with Directory class.
        Contributed by Andrew Hughes.

    - Enhancements
      - The internal HTTP/HTTPS connector now serves from multiple threads (issue #937).
      - Added targetRef support to templates, allow reference variables to 
        resolve to the full reference (issue #935).
        Contributed by Jeremy Gustie.
      - Fixed log level (issue #777). Reported by marcus-nl.

- 2.2.2 (08/05/2014)
    - Bugs fixed
      - Fixed generation of Android edition.
    - Enhancements
      - Updated agent.properties file with recent Opera user agent signature.

- 2.2.1 (05/06/2014)
    - Bugs fixed
      - Fixed missing internal FTP client connector registration.
      - Fixed missing internal HTTPS server isn't properly registered.
        Reported by Roy Olsen.
      - Fixed forgotten traces to the console #911, #905, #904.
        Reported by Emanuele Massara.
      - Fixed missing default values for DefaultSslContextFactory attributes, issue #903.
      - Removed unecessary ".properties" files from the distributions, issue #892.
      - Prevented NPE in org.httpclient.internal.HttpMethodCall.getStatusCode, issue #871.