@@ -7,6 +7,8 @@ Changes log
     - Bugs fixed
       - Fixed bug in OData extension when looping through a multi pages collection.
         Reported by Vishnu Perabathini.
+      - Fixed usage of custom Component with ServerServlet (issue #926).
+        Reported by Graham Smith.
     - Enhancements
       - 
 
